--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(load.linnarsson.sct.data)
 import(ExperimentHub)
 import(utils)
+importFrom(AnnotationHub,mcols)
 importFrom(AnnotationHub,query)
 importFrom(utils,read.csv)
