addition of hypothalamus_mrna

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ctd)
 export(ensembl_transcript_lengths_GCcontent)
 export(example_genelist)
 export(hpsd_genes)
+export(hypothalamus_mrna)
 export(id_genes)
 export(mgi_synonym_data)
 export(mouse_to_human_homologs)
