--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ewceData
 Title: The ewceData package provides reference data required for ewce
-Version: 1.17.1
+Version: 1.17.2
 Authors@R: 
     c(person(given = "Alan",
            family = "Murphy",
@@ -37,6 +37,7 @@ Suggests:
     cowplot,
     rmarkdown,
     markdown,
+    rbibutils,
     testthat (>= 3.0.0)
 biocViews: ExperimentData, ExperimentHub, ExpressionData, Genome, Proteome, 
             MicroarrayData, SequencingData, SingleCellData, RNASeqData
